<resources>
    <string name="app_name">HiHealth</string>
    <string name="register_name">Full Name ...</string>
    <string name="register_email">Email ...</string>
    <string name="register_phone">Register_Phone</string>
    <string name="register_dob">Date of Birth ...</string>
    <string name="register_password">Password ...</string>
    <string name="register_passwordreenter">Reenter Password ...</string>
    <string name="register">Sign up</string>
    <string name="login">Login</string>
    <string name="title_activity_login">HiHealth-Login</string>
    <string name="title_activity_register">HiHealth Register</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_medications">Medications</string>
    <string name="title_symptoms">Symptoms</string>
    <string name="title_reports">Reports</string>
    <string name="title_settings">Settings</string>

    <string name="button_text_add_medication">Add Medication</string>
    <string name="button_text_add_new_medication">Add New Medication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_medication">Add New Medication</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

