<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:id="@+id/profile_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/profile_edit_button"
        android:layout_alignTop="@+id/tool_bar"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="0dp"
        android:background="#f8f8f8"
        tools:context=".user.UserProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_picture_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
...
                app:cardCornerRadius="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_launcher_foreground" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="56dip"
                android:layout_marginTop="24dp"
                android:background="@color/white"
                android:elevation="1dp"
                android:gravity="center"
...
                android:textSize="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_picture_view" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dip"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:elevation="1dp"
                android:gravity="center"
...
                android:textSize="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="56dip"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:elevation="1dp"
                android:gravity="center"
                android:text="Phone"
                android:textColor="@color/black"
                android:textSize="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <TextView
                android:id="@+id/doc_name"
                android:layout_width="match_parent"
                android:layout_height="56dip"
                android:layout_marginTop="24dp"
                android:background="@color/white"
                android:elevation="1dp"
                android:gravity="center"
                android:text="Doctor Name"
                android:textColor="@color/black"
                android:textSize="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone" />

            <EditText
                android:id="@+id/doc_email"
                android:layout_width="match_parent"
                android:layout_height="56dip"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:elevation="1dp"
                android:gravity="center"
                android:text="Doctor Email"
                android:textColor="@color/black"
                android:textSize="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/doc_name" />

            <EditText
                android:id="@+id/doc_phone"
                android:layout_width="match_parent"
                android:layout_height="56dip"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:elevation="1dp"
                android:gravity="center"
...
