...

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:id="@+id/medication_icon"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/medication_info"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="left"
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
...
